<package>
  <name>hpp_tiago</name>
  <version>0.0.0</version>
  <description> HPP files for Tiago robots </description>
  <maintainer email="jmirabel@laas.fr">Joseph Mirabel</maintainer>
  <author>Joseph Mirabel</author>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>tiago_description</build_depend>
  <run_depend>tiago_description</run_depend>
</package>
